charts/miranum-platform/keycloak/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "keycloak"
  namespace: "process-platform"
spec:
  selector:
    matchLabels:
      app: "keycloak-development"
  replicas: 1
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: "keycloak-development"
    spec:
      containers:
        -
          name: "keycloak-development"
          image: "quay.io/keycloak/keycloak:20.0.3"
          imagePullPolicy: "Always"
          ports:
            - name: "http"
              containerPort: 8080
            - name: "https"
              containerPort: 8443
          readinessProbe:
            httpGet:
              path: "/auth/realms/master"
              port: 8080
