charts/miranum-platform/keycloak/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "keycloak-service"
  namespace: "process-platform"
  labels:
    app: "keycloak-development"
spec:
  ports:
    -
      port: 9090
      targetPort: 8080
  selector:
    app: "keycloak-development"
